--- a/MyJourneyToWork/Pages/Calculator.cshtml
+++ b/MyJourneyToWork/Pages/Calculator.cshtml
@@ -59,6 +59,11 @@
                     <label asp-for="calculator.sustainabilityWeighting" class="control-label"></label>
                     @Html.DisplayFor(model => model.calculator.sustainabilityWeighting, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
+                <div class="form-group">
+                    <label asp-for="calculator.EnvirementMessage" class="control-label"></label>
+                    @Html.DisplayFor(model => model.calculator.EnvirementMessage, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+
             }
         </form>
     </div>
